<resources>
    <string name="app_name">Smart Thermal</string>
    <string name="confirm">Confirm</string>
    <string name="about">About</string>
    <string name="rtsp_url_hint">请输入完整的Rtsp地址</string>
    <string name="count_down_tip">%1$ds\u0020跳过</string>
    <string name="scan_device">Connect\u0020Device</string>
    <string name="scan_device_stop">Stop\u0020Scan</string>
    <string name="scan_device_list">DeviceList：</string>
    <string name="title_device_list">DeviceList</string>
    <string name="title_input_rtsp_url">input address</string>
    <string name="title_media_gallery">MediaCenter</string>
    <string name="title_input_ftp_uri">ftp地址(本页面用于测试)</string>
    <string name="connect_device">Connect\u0020Device</string>
    <string name="enter_device">Enter\u0020Device</string>
    <string name="please_select_connect_device">Select Connect Device Info</string>
    <string name="about_software_introduce">\u0020\u0020\u0020\u0020The APP suitable for our handheld Thermal camera , you can got the real thermal image/video via the APP , and can remote control the thermal camera , also can share the image or video via the APP .</string>
    <string name="version_name_placeholder">v%1$s</string>
    <string name="control_left_ranging">Ranging</string>
    <string name="control_left_zoom">Zoom</string>
    <string name="control_left_image_setting">Image Setting</string>
    <string name="control_left_system_setting">System Setting</string>
    <string name="control_right_palette">Color Plate</string>
    <string name="control_right_file">Files</string>
    <string name="colour_atla_black">Whitehot</string>
    <string name="colour_atla_white">Blackhot</string>
    <string name="colour_atla_red">Redhot</string>
    <string name="colour_atla_green">Green</string>
    <string name="colour_atla_brownness">golden</string>
    <string name="colour_atla_rust">Violet</string>
    <string name="base_enter">Enter</string>
    <string name="base_known">Got it</string>
    <string name="quit_out">Refuse</string>
    <string name="click_to_law">Click to view the privacy agreement</string>
    <string name="laws_title">User privacy protocol</string>
    <string name="laws_content">We attach great importance to your personal information and privacy protection. In order to effectively protect your personal rights and interests, before using the "Smart Thermal" service, you must carefully read all the terms in the "user privacy agreement". In order to provide you with live view of the thermal camera through the APP and remote control of the thermal camera, we will use the necessary functional information. 1. In order to use the purchased hardware and simply control the hardware, we need access to the network. 2. In order to facilitate recording and storing the audio and video content of the hardware, we will obtain your memory and camera permissions. 3. We will carry out the use / protection of your device files and other rules, as well as your user rights and other provisions. 4. Agree on our limitation of liability and exemption provisions; If you agree to the above agreement and statement, please click "agree" to start using the products and services. If you use it again, you agree to the user privacy agreement by default. Otherwise, please exit the APP and suggest to delete or uninstall the APP.</string>
    <string name="operate_share">Share</string>
    <string name="operate_delete">Delete</string>
    <string name="delete_tip_placeholder">Confirm Delete File: %1$s?</string>
    <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>
    <string name="error_drm_unknown">An unknown DRM error occurred</string>
    <string name="error_no_decoder">This device does not provide a decoder for %1$s</string>
    <string name="error_no_secure_decoder">This device does not provide a secure decoder for %1$s</string>
    <string name="error_querying_decoders">Unable to query device decoders</string>
    <string name="error_instantiating_decoder">Unable to instantiate decoder %1$s</string>
    <string name="storage_permission_denied">Permission to access storage was denied</string>
    <string name="empty_picture_file_tip">Empty\u0020Image</string>
    <string name="empty_video_file_tip">Empty\u0020Video</string>
    <string name="str_reticle">Reticle</string>
    <string name="str_xy">X-Y</string>
    <string name="str_picture_in_picture">in picture</string>
    <string name="str_tracking">Tracking</string>
    <string name="str_sharpness">Sharpness</string>
    <string name="str_contrast">Contrast</string>
    <string name="str_brightness">Brightness</string>
    <string name="str_filtering">Denoise</string>
    <string name="tip_scanning_device">Scanning Device...</string>
    <string name="tip_scan_finished_no_device">Scan Finished, No Device</string>
    <string name="tip_open_wi_fi_hotspots">Please Open HotSpot</string>
    <string name="tip_open_net">Please Connect Wifi or Open HotSpot</string>
    <string name="tip_delete_success">Delete\u0020\u0020Success</string>
    <string name="tip_cur_ip_addr">Current\u0020IP：%1$s</string>
    <string name="tip_hot_spot_no_device">The hot spot has no connected device</string>
    <string name="tip_get_device_ip_exception">The current device IP is getting an exception：</string>
    <string name="tip_save_success">Save\u0020Success</string>
    <string name="help_device_wifi">Connect with Hotspot</string>
    <string name="help_phone_wifi">Connect with Wi-FI</string>
    <string name="help_same_wifi">Connect with Router</string>
    <string name="help_device_setting">Device Setting</string>
    <string name="help_phone_setting">Phone Setting</string>
    <string name="help_search_device">Search Device</string>
    <string name="select_hint">Read the Guide?</string>
    <string name="base_yes">Yes</string>
    <string name="base_no">No</string>
    <string name="help_search_device_1">Double-click the rocker button to enter Setting menu, \n enter network by short-press on rocker button,\n select Hotspot to configure.</string>
    <string name="help_search_device_2">Enable Hotspot connection and start to configure.</string>
    <string name="help_search_device_3">Set name and password,\n and confirm the setting by OK.</string>
    <string name="help_search_device_4">Select the right network on mobile device WLAN setting.</string>
    <string name="help_search_device_5">Type the right password.</string>
    <string name="help_search_device_6">Confirm the connection succeeded.</string>
    <string name="help_search_mobile_1">Make sure WLAN is open but in non-connection before enable the Personal Hotspot.</string>
    <string name="help_search_mobile_2">Set password.</string>
    <string name="help_search_mobile_3">Confirm Personal Hotspot opened succeeded.</string>
    <string name="help_search_mobile_4">Double-click the rocker button to enter Setting menu,\n enter network by short-press on rocker button,\n select Wi-Fi to configure.</string>
    <string name="help_search_mobile_5">Enable Wi-Fi connection,\n select the Hotspot from smart device.</string>
    <string name="help_search_mobile_6">Type the right password and confirm to Connection.</string>
    <string name="help_search_wifi_1">Select the wireless network on mobile device WLAN setting.</string>
    <string name="help_search_wifi_2">Connect it by typing the right password.</string>
    <string name="help_search_wifi_3">Confirm the connection succeeded.</string>
    <string name="help_search_wifi_4">Double-click the rocker button to enter Setting menu,\n enter network by short-press on rocker button,\n select Wi-Fi to configure.</string>
    <string name="help_search_wifi_5">Enable Wi-Fi connection, select the same wireless network as smart device.</string>
    <string name="help_search_wifi_6">Type the right password and confirm to Connection.</string>
    <string name="help_search_total_text">Connection to your mobile devices with 3 simple steps,\n enable to display view on a bigger screen,\n you can also have a full control from the smart device. </string>
    <string name="str_picture">Image</string>
    <string name="str_video">Video</string>
    <string name="menu_return_to_previous">Return to Previous</string>
    <string name="menu_connection_guide">Connection Guide</string>
    <string name="menu_device_management">Device Management</string>
    <string name="menu_realtime_vision">Real-time Vision</string>
    <string name="menu_live_stream">Live Stream</string>
    <string name="menu_about">About</string>
    <string name="detection_alarm">Detection alarm</string>
    <string name="detection_alarm_set">SET</string>
    <string name="detection_alarm_record">RECORD</string>
    <string name="detection_alarm_open">open</string>
    <string name="detection_alarm_close">close</string>
    <string name="detection_alarm_mode">Device reminder mode</string>
    <string name="detection_alarm_mode_mute">mute</string>
    <string name="detection_alarm_mode_vibrate">vibrate</string>
    <string name="detection_alarm_mode_sound">sound</string>
    <string name="detection_alarm_save_time">Save notification duration</string>
    <string name="detection_alarm_save_one_day">one day</string>
    <string name="detection_alarm_save_a_week">a week</string>
    <string name="detection_alarm_save_one_month">one month</string>
    <string name="detection_alarm_interval">Detection interval</string>
    <string name="detection_alarm_interval_5_seconds">5 seconds</string>
    <string name="detection_alarm_interval_1_minute">10 seconds</string>
    <string name="detection_alarm_interval_10_minutes">30 seconds</string>
    <string name="detection_alarm_interval_30_minutes">60 seconds</string>
    <string name="detection_alarm_all">ALL</string>
    <string name="detection_alarm_animal">ANIMAL</string>
    <string name="detection_alarm_person">PERSON</string>
    <string name="detection_alarm_delete_record">Delete record</string>
    <string name="detection_alarm_delete_all">Delete all</string>
    <string name="device_management">Device Management</string>
    <string name="realtime_vision">Real-time Vision</string>
    <string name="live_stream">Live Stream</string>
    <string name="about_product_sn">Product SN:  \t </string>
    <string name="about_current_version">Current Version:  \t</string>
    <string name="about_product_introduction">Product Introduction</string>
    <string name="about_version_update_check">Check for Update</string>
    <string name="about_got_update">Got New Version ：%1$s</string>
    <string name="about_start_update">Start Update</string>
    <string name="about_cancel_update">Cancel Update</string>
    <string name="about_checking_update">Checking For Update</string>
    <string name="error_network">NetWork Error，Please Check The NetWork Connection</string>
    <string name="about_update_downloading">Downloading ：%1$s</string>
    <string name="about_update_pushing">Transmitting ：%1$s</string>
    <string name="about_update_push">Update The Machine SoftWare</string>
    <string name="about_update_success">Update Success</string>
    <string name="error_update">Upgrade Failed</string>
    <string name="about_update_restart">ReStart</string>
    <string name="about_update_upgrading">Please wait, upgrading</string>
    <string name="new_version_detected">New Version Detected</string>
    <string name="new_version_latest">Already the latest version</string>
    <string name="str_exit">Exit</string>
    <string name="version_content">This app. requests device firmware version 2.0.2 or higher; Please download from link %1$s and update the device’s firmware on PC if necessary.</string>
    <string name="version_one">Access to Download</string>
    <string name="version_two">No Need</string>
    <string name="version_three">Don\'t show this again</string>
</resources>