<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/bg_dialog">
    <TextView
        android:id="@+id/tvContent"
        tools:text="连接APP需设备固件版本为V2.0.2以上;如果有必要，请在电脑上链接####下载更新固件"
        android:paddingTop="30dp"
        android:paddingBottom="18dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:autoLink="web"
        android:focusable="true"
        android:clickable="true"
        android:textIsSelectable="true"
        android:textSize="16sp"
        android:textColor="@color/text_color_one"
        android:text="@string/version_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:background="@drawable/shape_bg_main"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:text="@string/version_one"/>
    <TextView
        android:id="@+id/tvTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_click_bg"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:gravity="center"
        android:textSize="14sp"
        android:textColor="@color/text_color_one"
        android:text="@string/version_two"/>
    <TextView
        android:id="@+id/tvThree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_click_bg"
        android:padding="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:textSize="14sp"
        android:textColor="@color/text_color_one"
        android:text="@string/version_three"/>
</LinearLayout>