<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/bg_white_line_black_solid">
        <TextView
            android:id="@+id/tvContent"
            tools:text="搜索是否需要帮助"
            android:textColor="@color/white"
            android:maxLines="2"
            android:paddingTop="30dp"
            android:paddingBottom="18dp"
            android:textSize="16sp"
            android:text="@string/about_checking_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp">
            <LinearLayout
                android:id="@+id/llOne"
                android:minWidth="180dp"
                android:visibility="gone"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tvOne"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:gravity="center"
                    android:background="@drawable/shape_bg_main"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:text="@string/about_start_update"/>
                <TextView
                    android:id="@+id/tvTwo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:background="@drawable/shape_bg_main"
                    android:textColor="@color/white"
                    android:text="@string/about_cancel_update"/>
            </LinearLayout>
            <com.hq.monitor.view.IOSLoadingView
                android:id="@+id/loadingOne"
                android:layout_margin="30dp"
                android:layout_centerInParent="true"
                android:layout_width="60dp"
                android:layout_height="60dp"/>
            <ProgressBar
                android:id="@+id/pbOne"
                android:visibility="gone"
                android:layout_margin="30dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/bg_white_line_white_solid"
                android:padding="2dp"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="200dp"
                android:layout_height="8dp"/>
            <TextView
                android:id="@+id/tvThree"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="160dp"
                android:padding="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:textSize="15sp"
                android:background="@drawable/shape_bg_main"
                android:textColor="@color/white"
                android:text="@string/about_update_restart"/>
        </RelativeLayout>


</LinearLayout>